<resources>
    <string name="app_name">QQ邮箱</string>
    <string name="receive_message">收件箱</string>
    <string name="star_email">星标邮件</string>
    <string name="write_email">写邮件</string>
    <string name="note_thing">写记事</string>
    <string name="scan_file">扫描文件</string>
    <string name="setting">设置</string>
    <string name="time_poster">时光信使</string>
    <string name="my_receive_box">我的收件箱</string>
    <string name="my_application">我的应用</string>
    <string name="address_list">通讯录</string>
    <string name="notebook">记事本</string>
    <string name="calendar">日历</string>
    <string name="grade_card">贺卡</string>
    <string name="online_word">在线文档</string>
    <string name="every_grade_read">每日悦读</string>
    <string name="company_wechat">企业微信</string>
    <string name="more_application">更多应用</string>
    <string name="file_list">文件夹</string>
    <string name="group_email">群邮件</string>
    <string name="draft_box">草稿箱</string>
    <string name="have_sent">已发送</string>
    <string name="have_delete">已删除</string>
    <string name="rubbish_box">垃圾箱</string>
    <string name="over">╳</string>
    <string name="my_email">我的邮箱</string>
    <string name="email_main">baiyou1024@qq.com</string>
    <string name="search">搜索</string>
    <string name="add_email">添加账户</string>
    <string name="edit">编辑</string>
    <string name="username">百忧</string>
    <string name="my_account">我的账户</string>
    <string name="email_other">2889680858@qq.com</string>
    <string name="function_setting">功能设置</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cancel">取消</string>
    <string name="send">发送</string>
    <string name="receive_person">收件人：</string>
    <string name="sender">发件人：</string>
    <string name="theme">主题：</string>
    <string name="item_swipe_undo">撤消</string>
    <string name="item_swipe_dismissed">已删除</string>
    <string name="no_more_data">我也是有底线的</string>
    <string name="email_theme">The New York Times shared \'Amid Sexual Harassm Scandal,Elite Win\'</string>
    <string name="email_content">What\'s happening The New York Times shared The New York Amid Sexual Harassment Scandal,What\'s happening The New York Times shared The New York Amid Sexual Harassment Scandal.</string>
    <string name="space_box">没有邮件</string>
    <string name="email_tencent_company">腾讯企业邮</string>
    <string name="email_163">163邮箱</string>
    <string name="eamil_126">126邮箱</string>
    <string name="email_gmail">Gmail</string>
    <string name="email_outlook">Outlook</string>
    <string name="email_exchange">Exchange</string>
    <string name="other_email">其他邮箱</string>
    <string name="detail">详情</string>
    <string name="hidden">隐藏</string>
    <string name="time">时间：</string>
    <string name="date">2020/2/1</string>
    <string name="calendar_thing">日程</string>
</resources>