<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".activity.EmailDetailActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_vertical"
        android:layout_marginHorizontal="@dimen/margin_horizontal"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/iv_return_page"
            android:layout_width="@dimen/ic_size"
            android:layout_height="@dimen/ic_size"
            android:src="@mipmap/return_page"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/primary_50"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tv_theme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_horizontal"
                android:layout_marginVertical="@dimen/margin_vertical"
                android:ellipsize="end"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:text="@string/email_theme"/>
            <LinearLayout
                android:id="@+id/ll_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_horizontal"
                android:layout_marginBottom="@dimen/margin_vertical"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/tv_sender_email"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/teal_200"
                    android:layout_weight="1"
                    android:text="@string/email_main"/>
                <TextView
                    android:id="@+id/tv_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/blue"
                    android:text="@string/detail"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/ll_hidden"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_horizontal"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:text="@string/sender"/>
                    <TextView
                        android:id="@+id/tv_detail_sender_name"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textColor="@color/black"
                        android:text="@string/sender"/>
                    <TextView
                        android:id="@+id/tv_hidden"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/blue"
                        android:text="@string/hidden"/>
                </LinearLayout>
                <TextView
                    android:id="@+id/tv_detail_sender_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_horizontal_more"
                    android:layout_marginBottom="@dimen/margin_vertical"
                    android:text="@string/email_main"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:text="@string/receive_person"/>
                    <TextView
                        android:id="@+id/tv_detail_receive_name"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textColor="@color/black"
                        android:text="@string/username"/>
                </LinearLayout>
                <TextView
                    android:id="@+id/tv_detail_receive_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_horizontal_more"
                    android:layout_marginBottom="@dimen/margin_vertical"
                    android:text="@string/email_main"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_vertical"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:text="@string/time"/>
                    <TextView
                        android:id="@+id/tv_date"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/date"/>
                </LinearLayout>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/primary_50"/>
            <TextView
                android:id="@+id/tv_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/margin_vertical"
                android:layout_marginHorizontal="@dimen/margin_horizontal"
                android:text="@string/email_content"/>
        </LinearLayout>
    </ScrollView>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/primary_50"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_vertical"
        android:layout_marginHorizontal="30dp"
        android:orientation="horizontal"
        android:gravity="center|start">
        <ImageView
            android:layout_width="@dimen/ic_size"
            android:layout_height="@dimen/ic_size"
            android:src="@mipmap/space_star"/>
        <Space
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"/>
        <ImageView
            android:layout_width="@dimen/ic_size"
            android:layout_height="@dimen/ic_size"
            android:src="@mipmap/delete"/>
        <Space
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"/>
        <ImageView
            android:layout_width="@dimen/ic_size"
            android:layout_height="@dimen/ic_size"
            android:src="@mipmap/share"/>
        <Space
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"/>
        <ImageView
            android:layout_width="@dimen/ic_size"
            android:layout_height="@dimen/ic_size"
            android:src="@mipmap/more_action"/>
    </LinearLayout>
</LinearLayout>