<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginHorizontal="@dimen/margin_horizontal"
    tools:context=".activity.LoginActivity">
    <TextView
        android:id="@+id/tv_over"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/line_vertical"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:gravity="center_vertical"
        android:text="@string/over"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_vertical"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="26sp"
        android:text="添加账户"/>
    <ImageView
        android:id="@+id/iv_email_qq"
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_vertical"
        android:paddingVertical="5dp"
        android:src="@mipmap/email_qq"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/primary_50"
        android:layout_marginHorizontal="@dimen/margin_horizontal"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_vertical"
        android:layout_marginLeft="@dimen/margin_horizontal_most"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="35dp"
            android:layout_height="match_parent"
            android:scaleType="fitCenter"
            android:src="@mipmap/email_tencent_company" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="@dimen/margin_horizontal"
            android:gravity="center_vertical"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:text="@string/email_tencent_company"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="@dimen/margin_horizontal"
        android:background="@color/primary_50"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_vertical"
        android:layout_marginLeft="@dimen/margin_horizontal_most"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="35dp"
            android:layout_height="match_parent"
            android:scaleType="fitCenter"
            android:src="@mipmap/email_163" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="@dimen/margin_horizontal"
            android:gravity="center_vertical"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:text="@string/email_163"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="@dimen/margin_horizontal"
        android:background="@color/primary_50"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_vertical"
        android:layout_marginLeft="@dimen/margin_horizontal_most"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="35dp"
            android:layout_height="match_parent"
            android:scaleType="fitCenter"
            android:src="@mipmap/email_126" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="@dimen/margin_horizontal"
            android:gravity="center_vertical"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:text="@string/eamil_126"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="@dimen/margin_horizontal"
        android:background="@color/primary_50"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_vertical"
        android:layout_marginLeft="@dimen/margin_horizontal_most"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="35dp"
            android:layout_height="match_parent"
            android:scaleType="fitCenter"
            android:src="@mipmap/email_gmail" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="@dimen/margin_horizontal"
            android:gravity="center_vertical"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:text="@string/email_gmail"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="@dimen/margin_horizontal"
        android:background="@color/primary_50"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_vertical"
        android:layout_marginLeft="@dimen/margin_horizontal_most"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="35dp"
            android:layout_height="match_parent"
            android:scaleType="fitCenter"
            android:src="@mipmap/email_out_look" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="@dimen/margin_horizontal"
            android:gravity="center_vertical"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:text="@string/email_outlook"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="@dimen/margin_horizontal"
        android:background="@color/primary_50"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_vertical"
        android:layout_marginLeft="@dimen/margin_horizontal_most"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="35dp"
            android:layout_height="match_parent"
            android:scaleType="fitCenter"
            android:src="@mipmap/email_exchange" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="@dimen/margin_horizontal"
            android:gravity="center_vertical"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:text="@string/email_exchange"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="@dimen/margin_horizontal"
        android:background="@color/primary_50"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_vertical"
        android:layout_marginLeft="@dimen/margin_horizontal_most"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="35dp"
            android:layout_height="match_parent"
            android:scaleType="fitCenter"
            android:src="@mipmap/email_other" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="@dimen/margin_horizontal"
            android:gravity="center_vertical"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:text="@string/other_email"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="@dimen/margin_horizontal"
        android:background="@color/primary_50"/>

</LinearLayout>