<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".activity.MyEmail">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_vertical"
            android:orientation="horizontal"
            android:background="@color/white"
            >
            <TextView
                android:id="@+id/tv_return"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginHorizontal="@dimen/margin_horizontal"
                android:layout_centerInParent="true"
                android:textColor="@color/black"
                android:text="@string/over"
                android:textSize="20sp"
                android:textStyle="bold"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:text="@string/my_email"/>
        </RelativeLayout>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginHorizontal="@dimen/margin_horizontal"
            android:layout_marginVertical="20dp"
            app:cardCornerRadius="10dp"
            android:elevation="12dp"
            >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@mipmap/person_card"/>

                <LinearLayout
                    android:id="@+id/ll_header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">
                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:cardCornerRadius="25dp">

                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:background="@mipmap/header"
                            android:scaleType="fitXY" />
                    </androidx.cardview.widget.CardView>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:text="@string/edit"
                        android:textColor="@color/blue"
                        />
                </LinearLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="90dp"
                    android:layout_marginLeft="20dp"
                    android:textSize="23sp"
                    android:textColor="@color/black"
                    android:text="@string/username"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="130dp"
                    android:layout_marginLeft="20dp"
                    android:textColor="@color/primary_500"
                    android:text="@string/email_main"/>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_vertical"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="@dimen/margin_horizontal"
            android:textColor="@color/black"
            android:text="@string/my_account"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/line_vertical"
                android:layout_marginVertical="5dp"
                android:layout_marginHorizontal="@dimen/margin_horizontal"
                android:gravity="center_vertical"
                >
                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="25dp">
                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:background="@mipmap/header"
                        android:scaleType="fitXY"/>
                </androidx.cardview.widget.CardView>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="55dp"
                    android:orientation="vertical"
                    android:gravity="center_vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:text="@string/username"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/email_other"/>
                </LinearLayout>
                <ImageView
                    android:layout_width="10dp"
                    android:layout_height="16dp"
                    android:layout_marginTop="14dp"
                    android:layout_alignParentRight="true"
                    android:scaleType="centerCrop"
                    android:src="@mipmap/next"/>
            </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="70dp"
                android:background="@color/primary_50"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/line_vertical"
                android:layout_marginVertical="5dp"
                android:layout_marginHorizontal="@dimen/margin_horizontal"
                android:gravity="center_vertical"
                >
                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/primary_800"
                    android:layout_marginLeft="5dp"
                    app:cardCornerRadius="15dp">
                    <TextView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:gravity="center"
                        android:textSize="20sp"
                        android:text="+" />
                </androidx.cardview.widget.CardView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:layout_marginLeft="50dp"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:text="@string/add_email"/>
                <ImageView
                    android:layout_width="10dp"
                    android:layout_height="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_alignParentRight="true"
                    android:scaleType="centerCrop"
                    android:src="@mipmap/next"/>
            </RelativeLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_vertical"
            android:layout_marginTop="20dp"
            android:background="@color/white"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/margin_horizontal"
            android:gravity="center_vertical">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:text="@string/function_setting"/>
            <ImageView
                android:layout_width="10dp"
                android:layout_height="16dp"
                android:layout_alignParentRight="true"
                android:scaleType="centerCrop"
                android:src="@mipmap/next"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>